--- a/ClockApp/Base.lproj/Main.storyboard
+++ b/ClockApp/Base.lproj/Main.storyboard
@@ -7,21 +7,61 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Timer-->
+        <!--Alarm-->
         <scene sceneID="yYs-4F-hd6">
             <objects>
                 <viewController id="rrh-uP-xwV" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wKY-aA-myd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vfs-no-5Yj">
+                                <rect key="frame" x="20" y="74" width="374" height="540"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="LJF-c0-aN2">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LJF-c0-aN2" id="v0e-Gi-WoI">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="cWg-OF-3MJ" kind="presentation" id="blE-ue-ybI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="rrh-uP-xwV" id="LZc-bR-F7c"/>
+                                    <outlet property="delegate" destination="rrh-uP-xwV" id="aLA-fd-Tfr"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <viewLayoutGuide key="safeArea" id="Ppc-pM-MZd"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Timer" image="timer" catalog="system" id="dg1-u7-wez"/>
+                    <navigationItem key="navigationItem" title="Alarm" id="ruO-6G-mzu"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yL0-Di-zdR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1335" y="833"/>
+            <point key="canvasLocation" x="-428.98550724637687" y="832.33695652173924"/>
+        </scene>
+        <!--Add Alarm-->
+        <scene sceneID="4rE-n9-ZOB">
+            <objects>
+                <viewController id="qnq-XB-eXh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="net-ry-dMg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="hXT-5k-zSG"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Alarm" id="qtv-qc-keY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xaI-WE-nN7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1034.7826086956522" y="1580.7065217391305"/>
         </scene>
         <!--Clock-->
         <scene sceneID="9k5-24-EbT">
@@ -42,24 +82,24 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="124" id="xCz-te-ScB" customClass="WorldClockTableViewCell" customModule="ClockApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="124"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="100" id="xCz-te-ScB" customClass="WorldClockTableViewCell" customModule="ClockApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xCz-te-ScB" id="IPp-q2-LNR">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="124"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Zd-LV-MPz">
-                                                    <rect key="frame" x="20" y="11" width="334" height="44"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1Zd-LV-MPz">
+                                                    <rect key="frame" x="20" y="11" width="158" height="58"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFd-nE-0oT">
-                                                    <rect key="frame" x="20" y="63" width="334" height="44"/>
+                                                    <rect key="frame" x="182" y="11" width="172" height="58"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -106,7 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sej-qO-t05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="782.60869565217399" y="831.52173913043487"/>
+            <point key="canvasLocation" x="1397.1014492753625" y="831.52173913043487"/>
         </scene>
         <!--Time Zones Table View Controller-->
         <scene sceneID="pET-6E-6qO">
@@ -116,10 +156,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" text="" showsCancelButton="YES" id="vro-yK-Kkm">
+                        <searchBar key="tableHeaderView" contentMode="redraw" barStyle="blackTranslucent" text="" showsCancelButton="YES" translucent="NO" id="vro-yK-Kkm">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                            <color key="barTintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                             <textInputTraits key="textInputTraits"/>
                         </searchBar>
                         <prototypes>
@@ -152,7 +193,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a0b-7v-Lwl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1552" y="829"/>
+            <point key="canvasLocation" x="2457.971014492754" y="828.26086956521749"/>
         </scene>
         <!--StopWatch-->
         <scene sceneID="KSK-pB-hp9">
@@ -167,7 +208,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.45370429140256513" green="0.61444340650154161" blue="0.89280615482233505" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <inset key="imageEdgeInsets" minX="20" minY="20" maxX="20" maxY="20"/>
+                                <inset key="imageEdgeInsets" minX="20" minY="15" maxX="20" maxY="20"/>
                                 <state key="normal" image="play"/>
                                 <state key="selected" image="pause"/>
                                 <userDefinedRuntimeAttributes>
@@ -240,7 +281,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9zX-jI-sHb">
                                 <rect key="frame" x="324" y="601" width="70" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <state key="normal" title="Lap">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -255,6 +296,7 @@
                     <tabBarItem key="tabBarItem" title="StopWatch" image="stopwatch" catalog="system" id="C5u-Nj-qPU"/>
                     <connections>
                         <outlet property="dots" destination="Rop-rJ-zjE" id="DzG-8k-uaQ"/>
+                        <outlet property="laps" destination="9zX-jI-sHb" id="1o4-qJ-Drv"/>
                         <outlet property="minuteLabel" destination="ouc-0B-jBQ" id="iQy-cs-ZOH"/>
                         <outlet property="playButton" destination="27P-NP-J2I" id="qdD-b2-pHb"/>
                         <outlet property="secondLabel" destination="KJA-md-3nG" id="GQl-bc-7xc"/>
@@ -264,7 +306,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YWc-bf-Yqi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-339.13043478260875" y="831.52173913043487"/>
+            <point key="canvasLocation" x="568.1159420289855" y="831.52173913043487"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ZBc-Fe-n9O">
@@ -279,20 +321,60 @@
                     <connections>
                         <segue destination="bhh-Dg-p6R" kind="relationship" relationship="viewControllers" id="23q-Ll-LWw"/>
                         <segue destination="wOf-jU-O7j" kind="relationship" relationship="viewControllers" id="5O1-qR-huv"/>
-                        <segue destination="rrh-uP-xwV" kind="relationship" relationship="viewControllers" id="fWX-Dd-tYs"/>
+                        <segue destination="X9D-Mu-QIW" kind="relationship" relationship="viewControllers" id="fWX-Dd-tYs"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2nS-iz-z18" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1" y="34"/>
         </scene>
+        <!--Alarm-->
+        <scene sceneID="h4z-pQ-JVb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="X9D-Mu-QIW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Alarm" image="alarm" catalog="system" id="dg1-u7-wez"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bSN-Ic-5PP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rrh-uP-xwV" kind="relationship" relationship="rootViewController" id="vw4-Gx-WSG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f2m-sK-Cv8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1336.2318840579712" y="832.33695652173924"/>
+        </scene>
+        <!--Add Navigation Controller-->
+        <scene sceneID="qKI-wu-oW8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cWg-OF-3MJ" userLabel="Add Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2c1-6z-fBf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qnq-XB-eXh" kind="relationship" relationship="rootViewController" id="a1e-U5-Ele"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kZc-ET-YPi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="127.53623188405798" y="1580.7065217391305"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="alarm" catalog="system" width="124" height="128"/>
         <image name="clock" catalog="system" width="128" height="121"/>
         <image name="globe" catalog="system" width="128" height="121"/>
         <image name="pause" width="42" height="56"/>
         <image name="play" width="48" height="61"/>
         <image name="stopwatch" catalog="system" width="121" height="128"/>
-        <image name="timer" catalog="system" width="128" height="121"/>
     </resources>
 </document>
