This is final version of Clock Application with alarm and bed functionality implemented with proper working

--- a/ClockApp/Base.lproj/Main.storyboard
+++ b/ClockApp/Base.lproj/Main.storyboard
@@ -480,7 +480,7 @@
                                     <outlet property="delegate" destination="bhh-Dg-p6R" id="h6b-WE-XdB"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDT-uk-UEh">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDT-uk-UEh">
                                 <rect key="frame" x="51" y="128" width="52" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.32192706980000002" green="0.39796844349999999" blue="0.76865642509999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
